adiciona bean de relogio com timezone configurado no application.yml